apps/vps/music/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: music
spec:
  selector:
    app: navidrome
  ports:
    - name: http
      port: 80
      targetPort: http
